# Iris3D

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: pypi-publish.yml
docs/: video2.mkv
examples/: coordinates_conv.py  data_input.py  run_animated.py  run_display.py
exported_scenes/: interactive_event_20260608_164413.html
iris3d/: core.py  export.py  io.py  models.py  pyproject.toml  readme.md  themes.py  vis.py
iris3d/src/iris3d/: __init__.py  core.py  export.py  io.py  themes.py  vis.py
iris3d/tests/: data_input.py  run_animated.py  run_display.py
