[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iris3d"
version = "0.1.0"
description = "A lightweight, agnostic 3D event display for particle physics collisions."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20.0",
    "pyvista>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "notebook",
]