[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iris3d"
version = "0.1.0"
description = "A lightweight, agnostic 3D event display for particle physics collisions."
readme = "readme.md"
authors = [
    { name = "Saux Paulhenry & Contributors" }
]

requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics"
]
keywords = ["physics", "particle", "3d"]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.20.0",
    "pyvista>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "notebook",
]

[project.urls]
"Homepage" = "https://github.com/paulhenry46/Iris3D"
"Bug Tracker" = "https://github.com/paulhenry46/Iris3D/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]